# Path-planning-for-multiple-UAVs

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  bag_analysis.m  package.xml  plotInMatplotLib.py  plotMultipleTrajectories.py
LaTeX_text/: Bachelarka.pdf:Zone.Identifier  Bachelarka.zip:Zone.Identifier
one_uav_tmux_script/: session.yml
python files/: plotSearchTreeIn2D.py
real_world_template/: record.sh  tmux.sh  world_local.yaml
real_world_template/custom_configs/: automatic_start.yaml  bumper.yaml  control_manager.yaml  mpc_tracker.yaml  ouster_filter.yaml  ouster_filter_aloam.yaml  uav_manager.yaml
src/: Algorithm.h  AvoidanceAlgorithm.h  BinarySearchIntersection.h  Created_file.json  LinearAlgebraIntersetion.cpp  LinearAlgebraIntersetion.h  Multiple_trajectories.json  Node.cpp  Node.h  Object.cpp  Object.h  RRTAlgorithm.cpp  RRTAlgorithm.h  RRTStarAlgorithm.cpp  RRTStarAlgorithm.h  RRT_tree.cpp  RRT_tree.h  Vec3.cpp  Vec3.h  VelocityControllerP.cpp  VelocityControllerP.h  World.cpp  World.h  main.cpp
src/2D_plot/: Plot2D.cpp  Plot2D.h
src/avoidance/: AvoidanceAlgorithm.h  BinarySearchIntersection.cpp  BinarySearchIntersection.h  LinearAlgebraIntersection.cpp  LinearAlgebraIntersetion.cpp  LinearAlgebraIntersetion.h
src/avoidance/obstacle_detection/: Detection.cpp  Detection.h
src/environment_and_objects/: Cylinder.h  Object.cpp  Object.h  Sphere.cpp  Sphere.h  World.cpp  World.h
src/math/: Orientation.cpp  Orientation.h  StatisticalAnalysis.cpp  StatisticalAnalysis.h  Vec3.cpp  Vec3.h  data
src/motion/: Drone.cpp  Drone.h  MotionMethods.cpp  MotionMethods.h  Trajectory.cpp  Trajectory.h
src/path_planning_algorithms/: Algorithm.h  RRTAlgorithm.cpp  RRTAlgorithm.h  RRTStarAlgorithm.cpp  RRTStarAlgorithm.h
src/simulation/: TestSelector.cpp  TestSelector.h
src/tree_structure/: Node.cpp  Node.h  RRT_tree.cpp  RRT_tree.h
srv/: StartExecution.srv
